--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -9,12 +9,13 @@ on:
     branches: [ "master" ]
 
 jobs:
-  check:
+  compile:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Check commit messages
+      - name: Compile
         run: |
           git clone https://github.com/juruo888/Actions-Test.git
+          python --version
           cd Actions-Test
           python compile.py
