--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -10,9 +10,12 @@ on:
 
 jobs:
   compile:
-    runs-on: windows-7
+    runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.8.10"
+          architecture: [ "x64" , "x86" ]
       - name: Compile
         run: |
           git clone https://github.com/juruo888/Actions-Test.git
