--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -24,17 +24,16 @@ jobs:
           architecture: "x86"
       - name: Clone repository
         run: |
+          D:
           git clone https://github.com/juruo888/Actions-Test.git
           git clone https://github.com/juruo888/ScratchOff-Pictures.git
-          rename ScratchOff-Pictures pictures
+          mv ScratchOff-Pictures pictures
           cd pictures
           rd /s /q .git
-        shell: cmd
       - name: Compile
         run: |
           cd Actions-Test
           python compile.py
-        shell: cmd
       - name: Get version
         run: python ./.github/compile/version.py
       # - name: Publish to Releases
