--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -29,7 +29,7 @@ jobs:
           git clone https://github.com/juruo888/ScratchOff-Pictures.git
           mv ScratchOff-Pictures pictures
           cd pictures
-          rd /s /q .git
+          Remove-Item -Path .git -Recurse
       - name: Compile
         run: |
           cd Actions-Test
