--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -11,6 +11,10 @@ jobs:
     name: "Compile on Windows"
     if: startsWith( github.event.head_commit.message, 'VER' )
     runs-on: windows-latest
+    env:
+      MSG: ${{ toJSON(github.event.commits.*.message) }}
+      VERSION: ""
+      FILEPATH: ""
     steps:
       - name: Install Python 3.8.10 x64
         uses: actions/setup-python@v4
@@ -30,8 +34,6 @@ jobs:
           cd Actions-Test
           python compile.py
       - name: Get version
-        env:
-          MSG: ${{ toJSON(github.event.commits.*.message) }}
         run: |
           cd Actions-Test
           python ./.github/compile/version.py
