--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -12,6 +12,8 @@ jobs:
     if: startsWith( github.event.head_commit.message, 'VER' )
     runs-on: self-hosted
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
       - name: Install Python 3.8.10 x64
         uses: actions/setup-python@v4
         with:
@@ -22,23 +24,19 @@ jobs:
         with:
           python-version: "3.8.10"
           architecture: "x86"
-      - name: Clone repository
-        run: |
-          git clone https://github.com/juruo888/Actions-Test.git
       - name: Compile
-        env:
-          FILEPATH: ""
         run: |
-          cd Actions-Test
           python compile.py
       - name: Get version and log
         env:
           MSG: ${{ toJSON(github.event.commits.*.message) }}
           VER: ""
           VERSION: ""
+          FILEPATH: ""
         run: |
           cd Actions-Test
           python ./.github/compile/version.py
+          ./version.ps1
       - name: Publish to Releases
         uses: softprops/action-gh-release@v1
         with:
