--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -45,5 +45,5 @@ jobs:
           name: ${{ env.VERSION }}
           tag_name: ${{ env.VER }}
           body_path: log.txt
-          prerelease: ${{ contains( env.VER, '-alpha' ) }} || ${{ contains( env.VER, '-beta' ) }} || ${{ contains( env.VER, '-rc' ) }}
+          prerelease: ${{ contains( env.VER, '-alpha' ) }} or ${{ contains( env.VER, '-beta' ) }} or ${{ contains( env.VER, '-rc' ) }}
           files: ${{ env.FILEPATH }}
